* extra bold in the manual

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -171,7 +171,7 @@ Specifies that the type of soft-clipping to perform.
 \subsubsection{\TT{-W INT}}
 Specifies to remove duplicate mappings that occur within this bp window.
 
-\subsubsection{-B INT}
+\subsubsection{\TT{-B INT}}
 Specifies the window in bases in which to group seeds.
 
 \subsubsection{\TT{-q INT}}
