* map2 now will flag repetitive hits * map3 has a new option, -V, that flags repetitive hits

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -381,6 +381,8 @@ Specifies the number of multiples of the match score (\TT{-A}) for the minimum s
 \subsubsection{\TT{-H INT}}
 Specifies the number of bases to enumerate for a single homopolymer within the seed.
 
+\subsubsection{\TT{-V FLOAT}}
+Specifies the fraction of seed positions that are under the maximum (\TT{-S}).
 \section{tmap mapvsw}
 \label{sec:mapvsw}
 The \BF{mapvsw} is a command to map sequences to a reference genome.
