--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -171,6 +171,9 @@ Specifies that the type of soft-clipping to perform.
 	\item do not soft-clip any portion of the read
 \end{enumerate}
 
+\subsubsection{\TT{-y}}
+Specifies to soft clip only the last base of the key when using an SFF as input.
+
 \subsubsection{\TT{-W INT}}
 Specifies to remove duplicate mappings that occur within this bp window.
 
