* adding to FAQ about soft-clipping

--- a/doc/tmap-book.bib
+++ b/doc/tmap-book.bib
@@ -61,3 +61,12 @@
 	publisher = {IEEE Computer Society},
 	address = {Washington, DC, USA},
 }
+
+@Book{jones2004,
+	Author = "Jones, N. and Pevzner, P.",
+	title = "An Introduction to Bioinformatics Algorithms",
+	publisher = "MIT Press",
+	year = "2004",
+	address = "Cambridge",
+	isbn = "0262101068"
+}
