--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -636,6 +636,41 @@ Using the \TT{-a 1} option will output random hits for reads with multiple equal
 TMAP uses a deterministic random seed so that when using only one thread the same random choice will be made.
 Nevertheless, when using multiple threads (\TT{-n}), the order in which the random function call is made by the threads is determined by the operating system's scheduling of the threads.
 Therefore, the random function may return a different random mapping for the same read upon a second execution of TMAP.
+
+TMAP has the abilty to soft clip bases during alignment, that is to not include in the alignment bases that are present in the read.  This may be useful to only map high quality portions of the read, for example if the 3' end of the read has many low quality bases called but their inclusion in the alignment results in many mismatches or insertions/deletions (indels).
+
+\section{How does TMAP soft clip bases in the read?} 
+TMAP has the ability to soft clip bases during alignment, that is to not include in the alignment bases that are present in the read.  
+This may be useful to only map high quality portions of the read, for example if the 3' end of the read has many low quality bases called but their inclusion in the alignment results in many mismatches or insertions/deletions (indels).
+
+The user may specify the desired type of soft-clipping using the \TT{-g} option, with any combination of 5' and 3' soft-clipping (or neither) allowed. 
+The clipped bases are determined from local alignment (glocal or semi-global alignment).  
+For example, if 3' end soft-clipping is enabled, then a prefix of the read is aligned to a sub-sequence of the reference.  
+Where the read prefix ends in the alignment all comes from the local alignment, which is heavily influenced by the scoring parameters. 
+
+For example, consider the alignment below, which aligns the full read (GATTACA) to (a subsequence of) the reference (AGATTAAC).  
+Suppose we have scoring parameters (1,-3,-7,-2) for the match, mismatch, indel start, and indel extend operations.  
+The alignment score would be 1+1+1+1+1-7+1 = -1.
+
+\begin{verbatim}
+READ: GATTACA
+      |||||+|
+REF:  GATTA-A
+\end{verbatim}
+
+If instead we allow soft-clipping at the end of the read, we need only align a prefix of the read to (a subsequence of) the reference.  
+The optimal alignment score would be 5, with the alignment shown below.
+\begin{verbatim}
+READ: GATTACA
+      |||||SS
+REF:  GATTA
+\end{verbatim}
+
+The details of the local alignment algorithms and their variations are well characterized in the Literature or in an Introduction to Bioinformatics text book (\cite{jones2004}).  
+Using the local alignment and the scoring parameters to determine the soft-clipping is a powerful and flexible solution to trade off reduced alignment length for higher quality alignments via soft-clipping.
+
+For how soft-clipping is represented in SAM files, see the SAM specification for more details (\url{http://samtools.sourceforge.net/SAM1.pdf}).
+
 \chapter{Appendix}
 
 % References
