* adding the option -0 to specify an output file

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -135,6 +135,10 @@ Without this option, the format is auto-recognized by the file extension.
 The valid inputs are \TT{fa} or \TT{fasta} for FASTA, \TT {fq} or \TT{fastq} for FASTQ, or \TT{sff} for SFF.
 If compiled with SAMTools support, the option also supports \TT{sam} for SAM, or \TT{bam} for BAM.
 
+\subsubsection{\TT{-0 FILE}}
+Specifies the file name of the output file SAM format.
+If this is not specified, the output will be written to stdout.
+
 \subsubsection{\TT{-A INT}}
 Specifies the match score.
 This number must always be positive.
