* updating flow space re-alignment to better match input file types

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -28,6 +28,8 @@ urlcolor=myurlcolor     % color of external links
 \usepackage[all]{hypcap}
 \usepackage{courier}
 
+% TODO check all options are present
+
 % Version number
 \newcommand{\Version}{0.0.32}
 
