* fixing flow space re-alignment * checking options print the proper long flags

--- a/doc/tmap-book.tex
+++ b/doc/tmap-book.tex
@@ -130,6 +130,7 @@ The maximum number of bases in the reference genome can be $4294967295$, due to 
 \subsubsection{\TT{-r,--fn-reads FILE}}
 Specifies the file name of the reads to mapped.
 The input reads can be in FASTA, FASTQ, or SFF format.
+If an SFF is input, only reads that have a matching key sequence will be mapped.
 
 \subsubsection{\TT{-i,--reads-format STRING}}
 Specifies the file format of the reads file.
